--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
 
     compile 'commons-io:commons-io:2.4'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
-
+    compile group: 'org.gavaghan', name: 'geodesy', version: '1.1.3'
 }
